# three-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/camera/: camera.rs  mod.rs  orthographic.rs  perspective.rs
src/core/: buffer_geometry.rs  geometrical.rs  mod.rs  object.rs  object3d.rs  objectifiable.rs  renderable.rs  renderable_object.rs  transformable.rs  updatable.rs
src/geometry/: box3.rs  box_.rs  cone.rs  cylinder.rs  lines.rs  linestrip.rs  mod.rs  triangles.rs
src/loader/: gltf.rs  mod.rs
src/math/: box3.rs  capsule.rs  euler.rs  line3.rs  matrix3.rs  matrix4.rs  misc.rs  mod.rs  octree.rs  path3.rs  plane.rs  quaternion.rs  ray.rs  sphere.rs  triangle.rs  vector3.rs
src/object/: mesh.rs  mod.rs
src/renderer/: gl_renderer.rs  mod.rs  null_renderer.rs
src/scene/: mod.rs  scene.rs
src/shaders/: frag.glsl  vertex.glsl
src/shaders/pos/: frag.glsl  vertex.glsl
src/shaders/pos_normal/: frag.glsl  vertex.glsl
