[package]
name = "three-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
renderer = []
gltf-loader = []

[dependencies]
serde = {version = "1.0.193", default-features = false, features = ["derive"]}
#[cfg(feature = "gltf-loader")]
gltf = {version = "1.4.0", features = ["import"]}
#[cfg(feature = "renderer")]
glow = "0.13.0"
#[cfg(feature = "renderer")]
sdl2 = "0.36.0"