[package]
name = "three-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
renderer = ["gltf-loader"]
gltf-loader = []

[dependencies]
serde = {version = "1.0.193", default-features = false, features = ["derive"]}
#[cfg(feature = "gltf-loader")]
gltf = {version = "1.4.0", features = ["import"], optional = true}
#[cfg(feature = "renderer")]
glow = {version = "0.13.0", optional = true}
#[cfg(feature = "renderer")]
sdl2 = {version = "0.36.0", optional = true}