[package]
name = "three-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = {version = "1.0.193", default-features = false, features = ["derive"]}
gltf = {version = "1.4.0", features = ["import"], optional = true}
glow = {version = "0.13.0", optional = true}
sdl2 = {version = "0.36.0", optional = true}

[features]
default = []
gltf-loader = ["dep:gltf"]
renderer = ["gltf-loader", "dep:glow", "dep:sdl2"]

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
